2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* spdiags.m: Fixed the four-argument case to work for columns of
	length one.

2007-04-12  John W. Eaton  <jwe@octave.org>

	* optimization/qp.m: Avoid Octave indexing bug.

2007-04-12  Carlo de Falco  <kingcrimson@tiscali.it>

	* miscellaneous/menu.m, control/base/bddemo.m,
	control/hinf/dgkfdemo.m, control/system/packedform.m,
	control/system/sysrepdemo.m:
	Adapt to page_screen_output as a function.

2007-04-11  John W. Eaton  <jwe@octave.org>

	* miscellaneous/not.m: Delete.
	* miscellaneous/Makefile.in (SOURCES): Delete it from the list.

2007-04-11  A. S. Hodel  <a.s.hodel@eng.auburn.edu>

	* control/util/axis2dlim.m: Try harder to handle min and max vals
	that are close but not exactly equal.

2007-04-11  David Bateman  <dbateman@free.fr>

	* general/bitcmp.m: Make it work again.

2007-04-10  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Try harder to handle min and max vals
	that are close but not exactly equal.

2007-04-09  Daniel J. Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Add back the baseline line and let it be not adjustable
	in response to a change in x limits for now.

2007-04-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (__gnuplot_write_data__): New function.
	(__go_draw_axes__): Use it to write data to plot stream.

2007-04-09  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Fix typos in doc string.  Fix typo in call to
	zeros.  Set markerfacecolor property in call to plot.

2007-04-06  John W. Eaton  <jwe@octave.org>

	* linear-algebra/norm.m: Use new __vnorm__ function for vector args.

2007-04-06  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Use plot instead of a series of calls to line.

2007-04-05  John W. Eaton  <jwe@octave.org>

	* sparse/nonzeros.m, sparse/normest.m, sparse/spconvert.m,
	sparse/spdiags.m, sparse/speye.m, sparse/spfun.m, sparse/spones.m,
	sparse/sprand.m, sparse/sprandn.m, sparse/sprandsym.m,